--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "csv-writer": "^1.6.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
