--- a/NutriWizard/backend/package.json
+++ b/NutriWizard/backend/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "react-tooltip": "^5.28.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
